# s2-rust

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build-and-test.yml
examples/: pairing-client.rs  pairing-server.rs
s2energy-common/: Cargo.toml
s2energy-common/src/: lib.rs
s2energy-connection/: Cargo.toml
s2energy-connection/examples/: communication-client.rs  communication-server.rs  discovery-client.rs  discovery-server.rs  full-client.rs  full-server.rs  pairing-client.rs  pairing-server.rs
s2energy-connection/src/: combined_server.rs  error.rs  lib.rs
s2energy-connection/src/common/: mod.rs  websocket_extractor.rs  wire.rs
s2energy-connection/src/communication/: client.rs  error.rs  mod.rs  server.rs  transport.rs  websocket.rs  wire.rs
s2energy-connection/src/discovery/: error.rs  mod.rs
s2energy-connection/src/pairing/: client.rs  error.rs  mod.rs  server.rs  transport.rs  wire.rs
s2energy-connection/testdata/: altroot.key  altroot.pem  gen_cert.sh  localhost-alt.chain.pem  localhost-alt.key  localhost-alt.pem  localhost-altroot.chain.pem  localhost-altroot.key  localhost-altroot.pem  localhost.chain.pem  localhost.key  localhost.pem  root.pem  test.local.crt
s2energy-messaging/: Cargo.toml
s2energy-messaging/src/: connection.rs  lib.rs  transport.rs
s2energy-messaging/src/transport/: dbus.rs  websockets_json.rs
src/: connection.rs  lib.rs  main.rs  s2.schema.json  transport.rs  websockets_json.rs
src/pairing/: client.rs  mod.rs  server.rs  transport.rs  wire.rs
src/transport/: dbus.rs  websockets_json.rs
testdata/: gen_cert.sh  root.key  root.srl  test.local.chain.pem  test.local.key
