[workspace]
members = ["s2energy-common", "s2energy-connection", "s2energy-messaging"]
resolver = "3"

[workspace.dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
bon = "3.8.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
hmac = "0.12.1"
rand = "0.9.2"
regress = "0.10.4"
reqwest = { version = "0.13.1", features = ["json"] }
rustls = "0.23.36"
rustls-platform-verifier = "0.6.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["net"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.43"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Buildtime
quote = "1.0.41"
prettyplease = "0.2.37"
schemars = "0.8.22"
syn = { version = "2.0.106", features = ["fold"] }
typify = "0.5.0"

# Development
eyre = "0.6.12"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

# Internal
s2energy-common = { path = "./s2energy-common", version = "0.1.0" }
