[package]
name = "s2energy-connection"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
hmac.workspace = true
rand.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum-server.workspace = true
