[package]
name = "s2energy-connection"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
hyper.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
s2energy-common.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
zeroconf-tokio.workspace = true

[dev-dependencies]
axum-server.workspace = true
tokio = { workspace = true, features = ["signal"] }
