[package]
name = "s2energy-messaging"
version = "0.1.0"
edition = "2024"
authors = ["Wester Coenraads <wester.coenraads@tno.nl>"]
license = "Apache-2.0"
description = "Provides type definitions and utilities for the S2 energy flexibility standard"
homepage = "https://s2standard.org"
repository = "https://github.com/flexiblepower/s2-rust"
categories = ["api-bindings"]
keywords = ["s2", "energy", "energy-management", "protocol", "automation"]

[features]
default = ["websockets-json", "dbus"]
websockets-json = ["dep:futures-util", "dep:tokio", "dep:tokio-tungstenite"]
dbus = []

[dependencies]
bon.workspace = true
chrono.workspace = true
regress.workspace = true # This dependency is not used directly but necessary for typify to work
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal
s2energy-common.workspace = true

# feature=websockets-json
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[build-dependencies]
prettyplease.workspace = true
quote.workspace = true
schemars.workspace = true
serde_json.workspace = true
syn.workspace = true
typify.workspace = true

[dev-dependencies]
eyre.workspace = true
serde_json.workspace = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs_s2energy"]

# We can't use cfg(docsrs), because several dependencies have issues when passing
# --cfg docsrs as a compiler arg. So here we define our own docsrs cfg.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_s2energy)'] }
